[package]
name = "movie-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.3"
gl = "0.14.0"
sdl2 = "0.35.2"

egui = "0.23.0"
egui_extras = { version = "0.23.0", features = ["image", "http"] }

image = { version = "0.24", features = ["jpeg", "png"] }
serde_json = "1.0.107"
serde = { version = "1.0", features = ["derive"] }

ureq = "2.8.0"
open = "5.0.0"
