[package]
name = "movie-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = { version = "0.8.3",  optional = true }
gl    = { version = "0.14.0", optional = true }
sdl2  = { version = "0.35.2", optional = true }
# sdl2  = { version = "0.35.2", features = ["bundled"], optional = true }

eframe  = { version = "0.23.0", optional = true }

egui = "0.23.0"
egui_extras = { version = "0.23.0", features = ["image", "http"] }

image = { version = "0.24", features = ["jpeg", "png"] }
serde_json = "1.0.107"
serde = { version = "1.0", features = ["derive"] }

ureq = "2.8.0"
open = "5.0.0"

[features]
default = [ "sdl_backend" ]
sdl_backend = [ "dep:sdl2", "dep:gl", "dep:ahash" ]
eframe_backend = [ "dep:eframe" ]
